deploy: 22b2eeaf3e5c477edfd17e3083e248d5aaae4a13

--- a/index.html
+++ b/index.html
@@ -71,9 +71,11 @@ window.onload = wrap_img;
 
 <p><img src="/My_Research/images/diagram.png" alt="" title="https://github.com/fastai/fastpages" /></p>
 
-<p><a href="https://github.com/fastai/fastpages">fastpages</a> automates the process of creating blog posts via GitHub Actions, so you don’t have to fuss with conversion scripts.  A full list of features can be found on <a href="https://github.com/fastai/fastpages">GitHub</a>.</p>
-
-<p>You can edit the <code class="language-plaintext highlighter-rouge">index.html</code> file to change this content.</p>
+<h3 id="this-site-show-my-study--reseatch-tech--science">this site show my study &amp; reseatch tech / science</h3>
+<ul>
+  <li>Machine-Learing / DataScience</li>
+  <li>Physics / Math</li>
+</ul>
 
 <h1 id="posts">Posts</h1>
 
